syntax = "proto3";

package organization;

option go_package = "/organizationpb";

// The OrganizationService defines the gRPC service for organization-related operations
service OrganizationService {
    rpc GetOrganization (GetOrganizationRequest) returns (GetOrganizationResponse);
    rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
}

// Request message for getting an organization by ID
message GetOrganizationRequest {
    uint32 id = 1;  // Organization ID
}

// Response message containing organization details and associated users
message GetOrganizationResponse {
    uint32 id = 1;
    string gst_in = 2;
    string name = 3;
    string phone = 4;
    string email = 5;
    string address = 6;
    string template_id = 7;
    string website = 8;
    string city = 9;
    string country = 10;
    string state = 11;
    string module_id = 12;
    string zipcode = 13;
    string industry = 14;
    repeated User users = 15;  // List of users
}

message User {
    uint32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string role = 6;
    uint32 organization_id = 7;
    string keycloak_id = 8;
}

// Request message for creating an organization
message CreateOrganizationRequest {
    string gst_in = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string address = 5;
    string template_id = 6;
    string website = 7;
    string city = 8;
    string country = 9;
    string state = 10;
    string module_id = 11;
    string zipcode = 12;
    string industry = 13;
}

// Response message for creating an organization
message CreateOrganizationResponse {
    uint32 id = 1;
    string name = 2;
}
